src/objects/Grace_Period__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>D-1965</description>
        <formula>IF(Effective_From__c &lt;= TODAY()  &amp;&amp;   Efffective_To__c &gt;= TODAY() , TRUE, FALSE)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airline_Subscription_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airline Subscription Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_frequency_other_than_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow frequency other than Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efffective_To__c</fullName>
        <label>Efffective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Days__c</fullName>
        <label>Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Subscription_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Subscription Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Subscription_Period_months__c</fullName>
        <label>Minimum Subscription Period (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overseas_Subscription_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overseas Subscription Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Grace Period</relationshipLabel>
        <relationshipName>Grace_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Delivery_Fee_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Delivery Fee Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsored_Subscription_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsored Subscription Indicator</label>
        <type>Checkbox</type>
    </fields>
    <label>Grace Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Grace Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grace Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>